--- a/moe-cdn.fly3949.com/assets/css/main.css
+++ b/moe-cdn.fly3949.com/assets/css/main.css
@@ -256,8 +256,9 @@ a {
 body {
     font-family: "Lucida Grande", "Lucida Sans Unicode", Lucida, "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     -webkit-font-smoothing: antialiased;
-    height: 100%;
-    background-image: url("../img/bg.jpg");
+    height: 120%;
+    background-image: url("../img/A-shiki.jpg");
+    background-repeat:inherit|no-repeat|repeat|repeat-x|repeat-y
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
